2022-09-08T08:29:11Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013596499
* notice: last 14d: unq all: 14 36
* notice: prev accum: outdated-unq outdated-all / unq all: 293 463 / 312 491
* notice: next accum: outdated-unq outdated-all / unq all: 293 463 / 320 499
* notice: prev exec diff / last date diff / accum: unq all: +8 +8 -0 -0 / +8 +8 -0 -0 / 8 8
* notice: removed / changed dates: [] / [2022-09-08]

2022-09-08T02:34:44Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3012080787
* notice: last 14d: unq all: 10 28
* notice: prev accum: outdated-unq outdated-all / unq all: 293 463 / 312 491
* notice: next accum: outdated-unq outdated-all / unq all: 293 463 / 312 491
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-25 2022-09-07]

2022-09-07T16:34:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3009262031
* notice: last 14d: unq all: 10 28
* notice: prev accum: outdated-unq outdated-all / unq all: 293 463 / 311 490
* notice: next accum: outdated-unq outdated-all / unq all: 293 463 / 312 491
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-07]

2022-09-07T02:36:19Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3004687211
* notice: last 14d: unq all: 10 27
* notice: prev accum: outdated-unq outdated-all / unq all: 292 460 / 311 488
* notice: next accum: outdated-unq outdated-all / unq all: 293 463 / 311 490
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-23] / []

2022-09-06T16:34:16Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3001850455