@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-08T08:29:11Z",
-  "count" : 8,
-  "count_minmax" : [ 8, 8 ],
-  "count_decinc" : [ -0, +8 ],
-  "uniques" : 8,
-  "uniques_minmax" : [ 8, 8 ],
-  "uniques_decinc" : [ -0, +8 ]
+  "timestamp" : "2022-09-09T02:34:46Z",
+  "count" : 12,
+  "count_minmax" : [ 8, 12 ],
+  "count_decinc" : [ -0, +12 ],
+  "uniques" : 10,
+  "uniques_minmax" : [ 8, 10 ],
+  "uniques_decinc" : [ -0, +10 ]
 }
