@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-08T08:29:11Z",
-  "count_outdated" : 463,
-  "uniques_outdated" : 293,
-  "count" : 499,
-  "uniques" : 320,
+  "timestamp" : "2022-09-09T02:34:46Z",
+  "count_outdated" : 465,
+  "uniques_outdated" : 294,
+  "count" : 504,
+  "uniques" : 322,
   "clones" : [
-    {
-      "timestamp": "2022-08-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 12,
@@ -77,10 +70,10 @@
     },
     {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 8, 8 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ]
+      "count": 12,
+      "count_minmax": [ 8, 12 ],
+      "uniques": 10,
+      "uniques_minmax": [ 8, 10 ]
     }
   ]
 }
