@@ -1,12 +1,7 @@
 {
-  "count": 36,
-  "uniques": 14,
+  "count": 39,
+  "uniques": 16,
   "clones": [
-    {
-      "timestamp": "2022-08-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-26T00:00:00Z",
       "count": 12,
@@ -54,8 +49,8 @@
     },
     {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 8,
-      "uniques": 8
+      "count": 12,
+      "uniques": 10
     }
   ]
 }
