@@ -1,3 +1,11 @@
+2022-09-09T02:34:46Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3019585961
+* notice: last 14d: unq all: 16 39
+* notice: prev accum: outdated-unq outdated-all / unq all: 293 463 / 320 499
+* notice: next accum: outdated-unq outdated-all / unq all: 294 465 / 322 504
+* notice: prev exec diff / last date diff / accum: unq all: +2 +4 -0 -0 / +10 +12 -0 -0 / 10 12
+* notice: removed / changed dates: [2022-08-25] / [2022-09-08]
+
 2022-09-08T08:29:11Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3013596499
 * notice: last 14d: unq all: 14 36
